--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <h3><a>Download Excursion (Coming Soon!)</a></h3>
+    <h3><a href="index.html">Download Excursion (Coming Soon!)</a></h3>
+    <video autoplay>
+      <source src="./resources/videos/excursion.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of
+      interest around you. </p>
+    <img src="./resources/images/camp.jpg"></img>
   </body>
 </html>
