Draft completed project

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of
       interest around you. </p>
-    <img src="./resources/images/camp.jpg"></img>
+    <p><img src="./resources/images/camp.jpg"></img></p>
+    <p><img src="./resources/images/phone.png"></img></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <h3><a href="index.html">Download Excursion (Coming Soon!)</a></h3>
   </body>
 </html>
