Final Proect completed

--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
     <p><img src="./resources/images/phone.png"></img></p>
     <h2>Coming Soon for iPhone and Android</h2>
     <h3><a href="index.html">Download Excursion (Coming Soon!)</a></h3>
+    <footer class"footer>
+      <p>C Excursion</p>
+    </footer>
   </body>
 </html>
